Completed Week 4 HW, comments in MainContainer.js explain differences between result and Figma example

--- a/Week_4/weather-app/src/styles/MainContainer.css
+++ b/Week_4/weather-app/src/styles/MainContainer.css
@@ -7,10 +7,52 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #87b7ff;
+  background-image: linear-gradient(#345dff, #8aa1ff);
+  line-height: 50%;
 }
 
 #weather-container {
-  height: 60%;
+  height: 70%;
   width: 90%;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 2.5vw;
+}
+
+h2 {
+  font-size: 2vw;
+}
+
+h3 {
+  font-size: 1.5vw;
+}
+
+span {
+  font-size: 1.2vw;
+}
+
+img {
+  height: 10vw;
+  width: 10vw;
+}
+
+.cover {
+  display: flex;
+  align-items: center;
+}
+
+#current-temp {
+  font-size: 5vw;
+}
+
+#cover-visual {
+  height: 30%;
+  width: 30%;
+}
+
+#forecast-container {
+  display: flex;
+  justify-content: space-between;
 }
