--- a/Week_4/weather-app/src/styles/SideContainer.css
+++ b/Week_4/weather-app/src/styles/SideContainer.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: linear-gradient(#eeeeee, #ffffff);
 }
 
 #search-input {
